@@ -18,6 +18,8 @@ import java.util.stream.Collectors;
 
 import ch.ethz.seb.sps.domain.model.service.*;
 import ch.ethz.seb.sps.domain.model.service.DistinctMetadataWindowForExam;
+import ch.ethz.seb.sps.server.datalayer.dao.*;
+import ch.ethz.seb.sps.server.servicelayer.LiveProctoringCacheService;
 import org.apache.tomcat.util.http.fileupload.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -35,11 +37,6 @@ import ch.ethz.seb.sps.domain.model.PageSortOrder;
 import ch.ethz.seb.sps.domain.model.service.Session.ImageFormat;
 import ch.ethz.seb.sps.server.ServiceInfo;
 import ch.ethz.seb.sps.server.datalayer.batis.model.ScreenshotDataRecord;
-import ch.ethz.seb.sps.server.datalayer.dao.ExamDAO;
-import ch.ethz.seb.sps.server.datalayer.dao.GroupDAO;
-import ch.ethz.seb.sps.server.datalayer.dao.ScreenshotDAO;
-import ch.ethz.seb.sps.server.datalayer.dao.ScreenshotDataDAO;
-import ch.ethz.seb.sps.server.datalayer.dao.SessionDAO;
 import ch.ethz.seb.sps.server.servicelayer.ProctoringService;
 import ch.ethz.seb.sps.server.servicelayer.UserService;
 import ch.ethz.seb.sps.utils.Constants;
@@ -58,6 +55,7 @@ public class ProctoringServiceImpl implements ProctoringService {
     private final ScreenshotDAO screenshotDAO;
     private final ScreenshotDataDAO screenshotDataDAO;
     private final ProctoringCacheService proctoringCacheService;
+    private final LiveProctoringCacheService liveProctoringCacheService;
     private final UserService userService;
     private final ServiceInfo serviceInfo;
     private final JSONMapper jsonMapper;
@@ -71,6 +69,7 @@ public class ProctoringServiceImpl implements ProctoringService {
             final ScreenshotDAO screenshotDAO,
             final ScreenshotDataDAO screenshotDataDAO,
             final ProctoringCacheService proctoringCacheService,
+            final LiveProctoringCacheService liveProctoringCacheService,
             final UserService userService,
             final ServiceInfo serviceInfo,
             final JSONMapper jsonMapper) {
@@ -81,12 +80,13 @@ public class ProctoringServiceImpl implements ProctoringService {
         this.screenshotDAO = screenshotDAO;
         this.screenshotDataDAO = screenshotDataDAO;
         this.proctoringCacheService = proctoringCacheService;
+        this.liveProctoringCacheService = liveProctoringCacheService;
         this.userService = userService;
         this.serviceInfo = serviceInfo;
         this.jsonMapper = jsonMapper;
         this.distributedUpdateInterval = serviceInfo.getDistributedUpdateInterval();
         this.isDistributedSetup = serviceInfo.isDistributed();
-     }
+    }
 
     @Override
     public void checkMonitoringAccess(final String groupUUID) {
@@ -109,20 +109,46 @@ public class ProctoringServiceImpl implements ProctoringService {
     }
 
     @Override
-    public Result<ScreenshotViewData> getRecordedImageDataAt(final String sessionUUID, final Long timestamp) {
-        if (timestamp != null) {
-            return this.screenshotDataDAO
-                    .getAt(sessionUUID, timestamp)
-                    .map(data -> createScreenshotViewData(sessionUUID, data, null));
-        } else {
-            return this.screenshotDataDAO
-                    .getLatest(sessionUUID)
-                    .map(data -> createScreenshotViewData(sessionUUID, data, null));
-        }
+    public synchronized Result<ScreenshotViewData> getRecordedImageDataAt(final String sessionUUID, final Long timestamp) {
+        return Result.tryCatch(() -> {
+
+            boolean sessionActive = this.proctoringCacheService.getSession(sessionUUID).isActive();
+
+            if (timestamp == null) {
+                // this means last timestamp and only should be called on live recording views
+                if (sessionActive) {
+                    // get latest screenshot data form DB and check if we need an update on session cache
+                    Long pk = liveProctoringCacheService.getLatestSSDataId(sessionUUID, false);
+                    if (pk == null || pk < 0) {
+                        if (log.isDebugEnabled()) {
+                            log.warn("Failed to get live screenshot id for session: {}", sessionUUID );
+                        }
+                        throw new NoResourceFoundException(EntityType.SCREENSHOT_DATA, sessionUUID);
+                    }
+                    return screenshotDataDAO.recordByPK(pk)
+                            .map(rec -> createScreenshotViewData(sessionUUID, rec))
+                            .getOrThrow();
+                }
+            }
+
+            // in this case we do have a timestamp, we can use the cache
+            SessionScreenshotCacheData sessionScreenshotData = this.proctoringCacheService
+                    .getSessionScreenshotData(sessionUUID);
+
+            if (sessionActive) {
+                // check first if cache is up to date if timestamp is after last timestamp in cache, reload cache first
+                if (sessionScreenshotData.timestamps[sessionScreenshotData.timestamps.length - 1] < timestamp) {
+                    proctoringCacheService.evictSessionScreenshotData(sessionUUID);
+                    sessionScreenshotData = this.proctoringCacheService.getSessionScreenshotData(sessionUUID);
+                }
+            }
+
+            return createScreenshotViewData(sessionUUID, sessionScreenshotData.getAt(timestamp));
+        });
     }
 
     @Override
-    public Result<ScreenshotsInGroupData> getSessionsByGroup(
+    public synchronized Result<ScreenshotsInGroupData> getSessionsByGroup(
             final String groupUUID,
             final Integer pageNumber,
             final Integer pageSize,
@@ -162,14 +188,18 @@ public class ProctoringServiceImpl implements ProctoringService {
                     .skip((long) (pnum - 1) * pSize)
                     .limit(pSize)
                     .map(Session::getUuid)
-                    .collect(Collectors.toList());
-
+                    .toList();
+            
             final Map<String, ScreenshotDataRecord> mapping = this.screenshotDataDAO
-                    .allLatestIn(sessionIdsInOrder)
+                    .allOfMappedToSession(
+                            sessionIdsInOrder
+                                    .stream()
+                                    .map(uuid -> liveProctoringCacheService.getLatestSSDataId(uuid, true))
+                                    .toList())
                     .getOrThrow();
 
             final List<ScreenshotViewData> page = sessionIdsInOrder.stream()
-                    .map(sid -> createScreenshotViewData(sid, mapping.get(sid), millisecondsNow))
+                    .map(sid -> createScreenshotViewData(sid, mapping.get(sid)))
                     //SEBSP-145 - remove inactive sessions from page / add flag to indicative inactivity
                     .filter(Objects::nonNull)
                     .collect(Collectors.toList());
@@ -409,10 +439,9 @@ public class ProctoringServiceImpl implements ProctoringService {
     private void streamLatestScreenshot(final String sessionUUID, final OutputStream out) {
         InputStream screenshotIn = null;
         try {
-
-            screenshotIn = this.screenshotDataDAO
-                    .getLatestImageId(sessionUUID)
-                    .flatMap(pk -> this.screenshotDAO.getImage(pk, sessionUUID))
+            
+            screenshotIn =  this.screenshotDAO
+                    .getImage(this.liveProctoringCacheService.getLatestSSDataId(sessionUUID, true), sessionUUID)
                     .getOrThrow();
 
             IOUtils.copy(screenshotIn, out);
@@ -432,13 +461,29 @@ public class ProctoringServiceImpl implements ProctoringService {
             final String sessionUUID,
             final Long timestamp,
             final OutputStream out) {
+        
+        if (timestamp == null) {
+            streamLatestScreenshot(sessionUUID, out);
+            return;
+        }
 
         InputStream screenshotIn = null;
         try {
 
-            screenshotIn = this.screenshotDataDAO
-                    .getIdAt(sessionUUID, timestamp)
-                    .flatMap(pk -> this.screenshotDAO.getImage(pk, sessionUUID))
+            SessionScreenshotCacheData sessionScreenshotData = this.proctoringCacheService
+                    .getSessionScreenshotData(sessionUUID);
+
+            if (timestamp - sessionScreenshotData.timestamps[sessionScreenshotData.timestamps.length - 1] > 5 * Constants.SECOND_IN_MILLIS ) {
+                // refresh the session cache
+                this.proctoringCacheService.evictSessionScreenshotData(sessionUUID);
+                this.proctoringCacheService
+                        .getSessionScreenshotData(sessionUUID);
+            }
+
+            final ScreenshotDataRecord at = sessionScreenshotData.getAt(timestamp);
+
+            screenshotIn = this.screenshotDAO
+                    .getImage(at.getId(), sessionUUID)
                     .getOrThrow();
 
             IOUtils.copy(screenshotIn, out);
@@ -522,10 +567,7 @@ public class ProctoringServiceImpl implements ProctoringService {
     }
 
     private long lastUpdateTimeScreenshotViewData = 0;
-    private ScreenshotViewData createScreenshotViewData(
-            final String sessionUUID,
-            final ScreenshotDataRecord data,
-            final Long timestamp) {
+    private ScreenshotViewData createScreenshotViewData(final String sessionUUID, final ScreenshotDataRecord data) {
 
         if (data == null) {
             return null;
@@ -597,7 +639,6 @@ public class ProctoringServiceImpl implements ProctoringService {
                 this.clearGroupCache(groupUUID, true);
             } else {
                 
-                // TODO use CacheManager to get all actual cached sessions to update
                 Map<String, Long> updateTimes = this.proctoringCacheService
                         .getLiveSessionTokens(activeGroup.uuid)
                         .stream()
